<resources>
    <string name="app_name">To Do List</string>
    <string name="to_do_list">To Do List</string>
    <string name="add_a_task">Add a Task</string>
    <string name="name">Name:</string>
    <string name="desc">Desription:</string>
    <string name="myspinner">Degree:</string>
    <string name="deadline">Deadline:</string>
    <string name="date">Date:</string>
    <string name="fill_in_this_form">Fill in this form:</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="development">Development</string>
    <string name="uploading">Uploading</string>
    <string name="reject">Reject</string>
    <string name="closed">Closed</string>
    <string name="ok">Ok</string>
</resources>