<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/txt_name_plan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/add_a_task"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_this_form"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="25dp"
        android:padding="15dp"
        android:layout_marginTop="20dp">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/spiner_add_to_do"
            android:entries="@array/degreeList"
            android:text="@string/myspinner"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/edt_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/deadline"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/main"
        android:text="@string/save"
        app:cornerRadius="12dp"/>

</LinearLayout>